# AI-Fullstack

./: README.md
Agents/: agent.py  main.py
CREWAI/Flows-CrewAI/: flow-runner.ipynb  movie_recommendation_flow.py
CREWAI/Flows-CrewAI/models/: structured_flow.py
CREWAI/Reaserch-CrewAI-Agent/: crew_runner.ipynb  reaserch_crew.py  research_output.py
CREWAI/Reaserch-CrewAI-Agent/config/: agents.yaml  tasks.yaml
CREWAI/crewai-into/: ReAct-Agent-Loop.py  ReAct-Manual-Execution-Agent.py  crewai-flow-conditions.ipynb  crewai-multi-agents.ipynb
CREWAI/crewai-multi-agent-flow/: async_task_execution.ipynb  crewai_memory_1.ipynb  custom_knowldge_source_crewai_agents.ipynb  embed_knowldge_source_crewai_agent.ipynb  hirarchicalProcesses.ipynb  latest_ai_news.txt  ltm.db  notebook.ipynb
CREWAI/crewai_test_flow/: README.md  poem.txt  pyproject.toml
CREWAI/crewai_test_flow/src/crewai_test_flow/: main.py
Huggingface/: main.py
LANGGRAPH/langraph_learn/: chat_checkpoint.py  chat_nag.py
hello_world/: gemini_hello.py  gemini_openai.py  main.py
prompts/: chainOfThought.py  few_shot.py  zero.py
