[project]
name = "crewai_test_flow"
version = "0.1.0"
description = "crewai-test-flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.0"
]

[project.scripts]
kickoff = "crewai_test_flow.main:kickoff"
run_crew = "crewai_test_flow.main:kickoff"
plot = "crewai_test_flow.main:plot"
run_with_trigger = "crewai_test_flow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
